load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "copylock",
    srcs = ["copylock.go"],
    importpath = "github.com/albertocavalcante/bazelle/tools/nogo/copylock",
    visibility = ["//visibility:public"],
    deps = ["@org_golang_x_tools//go/analysis/passes/copylock"],
)

go_test(
    name = "copylock_test",
    srcs = ["copylock_test.go"],
    embed = [":copylock"],
    deps = ["@org_golang_x_tools//go/analysis/analysistest"],
)
