load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "errcheck",
    srcs = ["errcheck.go"],
    importpath = "github.com/albertocavalcante/bazelle/tools/nogo/errcheck",
    visibility = ["//visibility:public"],
    deps = ["@com_github_kisielk_errcheck//errcheck"],
)

go_test(
    name = "errcheck_test",
    srcs = ["errcheck_test.go"],
    embed = [":errcheck"],
    deps = ["@org_golang_x_tools//go/analysis/analysistest"],
)
