load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "lostcancel",
    srcs = ["lostcancel.go"],
    importpath = "github.com/albertocavalcante/bazelle/tools/nogo/lostcancel",
    visibility = ["//visibility:public"],
    deps = ["@org_golang_x_tools//go/analysis/passes/lostcancel:go_default_library"],
)
