load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "structtag",
    srcs = ["structtag.go"],
    importpath = "github.com/albertocavalcante/bazelle/tools/nogo/structtag",
    visibility = ["//visibility:public"],
    deps = ["@org_golang_x_tools//go/analysis/passes/structtag:go_default_library"],
)
