load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "unusedresult",
    srcs = ["unusedresult.go"],
    importpath = "github.com/albertocavalcante/bazelle/tools/nogo/unusedresult",
    visibility = ["//visibility:public"],
    deps = ["@org_golang_x_tools//go/analysis/passes/unusedresult"],
)

go_test(
    name = "unusedresult_test",
    srcs = ["unusedresult_test.go"],
    embed = [":unusedresult"],
    tags = ["manual"],  # requires go tool in PATH, not available in Bazel sandbox
    deps = ["@org_golang_x_tools//go/analysis/analysistest"],
)
