load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "daemon",
    srcs = [
        "client.go",
        "handler.go",
        "lifecycle.go",
        "protocol.go",
        "server.go",
    ],
    importpath = "github.com/albertocavalcante/bazelle/cmd/bazelle/internal/daemon",
    visibility = ["//cmd/bazelle:__subpackages__"],
    deps = [
        "//cmd/bazelle/internal/watch",
        "//internal/log",
        "@bazel_gazelle//language",
    ],
)

go_test(
    name = "daemon_test",
    srcs = [
        "client_test.go",
        "handler_test.go",
        "lifecycle_test.go",
        "protocol_test.go",
        "server_test.go",
    ],
    embed = [":daemon"],
    race = "on",
)

go_test(
    name = "daemon_integration_test",
    srcs = ["integration_test.go"],
    embed = [":daemon"],
    race = "on",
    tags = ["integration"],
)
